TRYING TO ADD LINE BREAKS BUT FAILE Ufwvjwwfwwfwffwfw

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <style>
 #editBox {
 	font-family:"Lucida Console", Monaco, monospace;
-	border-width:medium;
 	border-color:black;
-	border: 10px;
+	border: thin solid;
+	white-space:pre-line;
 }
 </style>
 <body>
@@ -20,12 +20,9 @@
 <button>Save</button>
 <button>Load</button>
 <button id="runButton">Run</button>
-<table>
-<td>
-<div id="editBox" contenteditable="true"></div></td><td>
+<div id="editBox" contenteditable="true"></div>
 <div><canvas id="mycanvas"></canvas></div>
-</td>
-</table>
+
     
 </p>
  </body>
