Return edit box to textarea

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <button>Save</button>
 <button>Load</button>
 <button id="runButton">Run</button>
-<div id="editBox" contenteditable="true"></div>
+<textarea id="editBox"></textarea>
 <div><canvas id="mycanvas"></canvas></div>
 
     
